--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
   <title>Testautomation Course Frauenloop 2025</title>
   <style>
+:root {
+  --page-background:  #BDC5E8;
+  --main-background:  #E0E4F7;
+  --main-highlight:#856DB6;
+  --secondary-font-color: #53567d;
+  --card-background: #FBF9FE;
+
+
+
+}
+
     body {
-      background-color: #edf1f4;
+      background-color:var(--page-background);
       background-size: cover;
     }
 
     .main-bg {
-      background: #edf1f4;
+      background: var(--main-background);
       border-radius: 1rem;
       box-shadow: 0 0 24px rgba(0, 0, 0, 0.08);
       max-width: 1300px;
@@ -27,9 +38,35 @@
       text-justify: distribute;
     }
 
-    .bg-primary {
-      background-color: #3c9aec !important;
+    b, strong{
+      color: var(--secondary-font-color);
     }
+
+    details summary {
+      margin-left: -1rem;
+    }
+
+    .card {
+      padding: 0 1rem 0.5rem 1rem;
+      margin-bottom: 1rem;
+      background-color: var(--card-background);
+    }
+  
+
+    @media (min-width: 1200px) {
+
+   .h4, h4 {
+    font-size: 1.3rem;
+  }   
+  .fs-5{
+    font-size: 1.2rem;
+     letter-spacing: 10%;
+  }
+  .h5, h5 {
+    font-size: 1.2rem;
+   
+  }
+}
   </style>
 </head>
 
@@ -38,11 +75,13 @@
     <h1 class="mb-4 text-center">Testautomation Course Frauenloop 2025</h1>
     <p class="text-center">Many thanks to all the people providing pages to practice automated testing with!</p>
     <p>This page is still in Draft mode.</p>
+   
     <!--Second Cycle Card-->
     <h2 class="mt-5 mb-3">My Second Cycle - Selenium Webdriver and Testing Frameworks</h2>
     <p>A lot of pages we tested with snippets and Selinium IDE in the first cycle are now used again.</p>
-    <!-- Eviltester Calculator-->
-      <h3 class="mt-4">Eviltester Calculator</h3>
+    
+      <article class="card ">
+      <h3 class="mt-3">Eviltester Calculator</h3>
       <p><strong>Page tested:</strong> <a href="https://testpages.eviltester.com/styled/calculator"
           target="_blank">https://testpages.eviltester.com/styled/calculator</a></p>
       <p><strong>Selenium Webdriver file:</strong> <a
@@ -108,9 +147,10 @@
         </ol>
        
       </details>
-
+</article>
+  <article class="card ">
     <!-- Eviltester Triangle -->
-    <h3 class="mt-4">Eviltester Triangle</h3>
+    <h3 class="mt-3">Eviltester Triangle</h3>
     <p><strong>Page tested:</strong> <a href="https://testpages.eviltester.com/styled/apps/triangle/triangle001.html"
         target="_blank">https://testpages.eviltester.com/styled/apps/triangle/triangle001.html</a></p>
     <p><strong>Selenium Webdriver file:</strong> <a
@@ -173,12 +213,13 @@
         <li>Clears the answer in the webpage</li>
       </ol>
     </details>
+</article>
 
     <!--First Cycle Card-->
     <h2 class="mt-5 mb-3">My First Cycle - Basic Automation of Websites</h2>
-
+  <article class="card ">
     <!-- Dynamic Tables Eviltester -->
-    <h3 class="mt-4">Dynamic Tables Eviltester</h3>
+    <h3 class="mt-3">Dynamic Tables Eviltester</h3>
     <p><strong>Page tested:</strong> <a href="https://testpages.eviltester.com/styled/tag/dynamic-table.html"
         target="_blank">https://testpages.eviltester.com/styled/tag/dynamic-table.html</a></p>
     <p><strong>JS Snippet:</strong> <a
@@ -254,9 +295,10 @@ runTest(generateTestcase(columns, rows))</code></pre>
         </li>
       </ul>
     </details>
-
+</article>
+  <article class="card ">
     <!-- WordPress Tables -->
-    <h3 class="mt-4">WordPress Tables (lookup, paging, filtering)</h3>
+    <h3 class="mt-3">WordPress Tables (lookup, paging, filtering)</h3>
     <p><strong>Page tested:</strong> <a href="https://practice-automation.com/tables/"
         target="_blank">https://practice-automation.com/tables/</a></p>
     <p><strong>JS Snippet:</strong> <a
@@ -277,7 +319,7 @@ runTest(generateTestcase(columns, rows))</code></pre>
     </details>
 
     <!-- Dynamic Content -->
-    <h3 class="mt-4">Dynamic Content</h3>
+    <h3 class="mt-3">Dynamic Content</h3>
     <p><strong>Page tested:</strong> <a
         href="https://moatazeldebsy.github.io/test-automation-practices/?#/dynamic-elements"
         target="_blank">https://moatazeldebsy.github.io/test-automation-practices/?#/dynamic-elements</a></p>
@@ -331,9 +373,10 @@ runTest(generateTestcase(columns, rows))</code></pre>
         and the status of the loading indicator. Assertion of time passed until UL appears against value set in
         slider.</p>
     </details>
-
+</article>
+  <article class="card ">
     <!-- Eviltester Triangle (Cycle 1) -->
-    <h3 class="mt-4">Eviltester Triangle (Cycle 1) </h3>
+    <h3 class="mt-3">Eviltester Triangle (Cycle 1) </h3>
     <p><strong>Page tested:</strong> <a href="https://testpages.eviltester.com/styled/apps/triangle/triangle001.html"
         target="_blank">https://testpages.eviltester.com/styled/apps/triangle/triangle001.html</a></p>
     <p><strong>JS Snippet:</strong> <a
@@ -408,6 +451,7 @@ runTest(generateTestcase(columns, rows))</code></pre>
           issue.</li>
       </ul>
     </details>
+</article>
 
   </main>
   <!-- Bootstrap JS Bundle (includes Popper) -->
